# heater_bot

./: .env  .gitignore  Dockerfile  Makefile  README.md  amvera.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 17fe3cc87aa5_init.py  5c7b846a0541_edit_model_reminders_time.py  8c02ea87eed7_edit_reminder_model.py  a8874ef48285_add_model_reminders.py  ebaaca2cc7a9_edit_model_reminders.py  fc006743ae85_del_manager.py
bot_config/: __init__.py  bot_instance.py  telegram_client.py
database/: __init__.py  accessor.py  database.py
docs_html/: bot_config.html  database.html  filters.html  handlers.html  index.html  keyboards.html  models.html  projects_images.html  repository.html  search.js  services.html  setup.html  templates.html
docs_html/bot_config/: telegram_client.html
docs_html/handlers/: group_handlers.html  private_handlers.html
docs_html/keyboards/: prices_kb.html  remind_kb.html  services_kb.html  start_kb.html
filters/: __init__.py  filters.py
handlers/: __init__.py
handlers/group_handlers/: __init__.py  commands.py  db_export.py  remind_handler.py  start_handler.py
handlers/private_handlers/: __init__.py  about.py  installation_handler.py  prices_handler.py  projects_handler.py  (+4 more)
keyboards/: __init__.py  prices_kb.py  projects_clean_pipes_kb.py  projects_kb.py  remind_kb.py  services_kb.py  start_group_kb.py  start_kb.py  task_status_kb.py
models/: __init__.py  reminders.py  users.py
projects_images/: __init__.py
repository/: __init__.py  reminders.py  users.py
services/: __init__.py  excel_export.py  reminders.py  users.py
setup/: __init__.py  commands.py  routers.py
templates/: __init__.py
(+10 files in other folders)
