[project]
name = "heater_service_bot"
version = "0.1.0"
description = "Telegram-бот: заявки, напоминания, экспорт в Excel, админ-функции"
authors = [{ name = "Клим", email = "klim.klushin@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "aiogram>=3.22.0,<4.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "sqlalchemy[asyncio]>=2.0.43,<3.0.0",
  "greenlet>=3.2.4,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "pandas>=2.3.2,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "alembic>=1.16.4,<2.0.0",
]

[project.scripts]
heater_service_bot = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.3.0,<8.0.0"
pytest = ">=8.4.1,<9.0.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
freezegun = "^1.5.5"
asynctest = "^0.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
package-mode = false

